spot match info

--- a/index.html
+++ b/index.html
@@ -189,6 +189,15 @@
 <div>
   <ul>
     <li>Spot the matching figure. Each generated pair has one matching image. Click it to generate a new pair of cards.</li>
+    <li>Randomized scale &amp; rotation of the shapes can be toggled in the Settings.</li>
+    <li>Dual device feature:
+      <ul>
+        <li>Enter a number in the <b>Seed</b> input field to force the random number generator to become predictable.</li>
+        <li>Open the page in another device and enter the same seed number.</li>
+        <li>Toggle the <b>Matched</b> setting to display one shape cluster on each device.</li>
+        <li>Identify and click the matching shape on both devices to proceed in parallel.</li>
+      </ul>
+    </li>
   </ul>
 </div>
 <br/>
