--- a/index.html
+++ b/index.html
@@ -192,9 +192,8 @@
     <li>Randomized scale &amp; rotation of the shapes can be toggled in the Settings.</li>
     <li>Dual device feature:
       <ul>
-        <li>Enter a number in the <b>Seed</b> input field to force the random number generator to become predictable.</li>
-        <li>Open the page in another device and enter the same seed number.</li>
-        <li>Toggle the <b>Matched</b> setting to display one shape cluster on each device.</li>
+        <li>Toggle Matched mode to display one shape cluster on the device.</li>
+        <li>Scan the QR code on the second device to display the matched cluster.</li>
         <li>Identify and click the matching shape on both devices to proceed in parallel.</li>
       </ul>
     </li>
