--- a/spotmatch.html
+++ b/spotmatch.html
@@ -142,8 +142,13 @@
     <h3>Settings</h3>
     <ul>
       <li>Use the corresponding sliders to toggle on/off shape rotation and size randomization.</li>
-      <li>Enter a number in the <b>seed</b> input box to designate a seed for the randomization function.</li>
-      <li>Toggle the "Matched" slider to display a single cluster. Use this with the "seed" input for simultaneous interaction on a mobile device and computer.</li>
+      <li>Matched mode:
+        <ul>
+          <li>One cluster will display on this device.</li>
+          <li>Scan the QR code (or open the link) with a second device to display the matched cluster.</li>
+          <li>Identify and click the matching shape on both devices to proceed in parallel</li>
+        </ul>
+      </li>
     </ul>
   </label>
 
