--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
 
     ul {
-      margin-top:0;
+      margin-top: 0;
     }
   </style>
 </head>
@@ -57,19 +57,20 @@
     To view the code, contribute, or provide feedback, visit:<br />
     <a href="https://github.com/visiontherapy/visiontherapy.github.io">https://github.com/visiontherapy/visiontherapy.github.io</a>.
   </div>
-<hr/>
+  <hr />
 
-<ul>
-  <li><a href="#cp">CP Saccades / Space Fixator / Red-Green delete</a></li>
-  <li><a href="#hart">Hart Chart / Decoding</a></li>
-  <li><a href="#tracking">Letter Tracking</a></li>
-  <li><a href="#glyphs">Tranaglyphs / Fusion cards</a></li>
-  <li><a href="#lines">Line counting</a></li>
-  <li><a href="#blocks">Pattern Blocks</a></li>
-  <li><a href="#spotmatch">Spot the Match</a></li>
-</ul>
+  <ul>
+    <li><a href="#cp">CP Saccades / Space Fixator / Red-Green delete</a></li>
+    <li><a href="#hart">Hart Chart / Decoding</a></li>
+    <li><a href="#tracking">Letter Tracking</a></li>
+    <li><a href="#glyphs">Tranaglyphs / Fusion cards</a></li>
+    <li><a href="#lines">Line counting</a></li>
+    <li><a href="#blocks">Pattern Blocks</a></li>
+    <li><a href="#spotmatch">Spot the Match</a></li>
+    <li><a href="#clapstomp">Clap it Stomp it</a></li>
+  </ul>
 
-  <hr/>
+  <hr />
 
   <h3 id="cp"><a href="cpsaccades.html">CP Saccades / Space Fixator / Red-Green delete</a></h3>
   <div>
@@ -123,8 +124,8 @@
   <h3 id="tracking"><a href="lettertracking.html">Letter Tracking</a></h3>
   <div>
     <ul>
-<li>Find each letter of the alphabet in order.</li>
-<li>Timer will start automatically on first click, and stop when all letters have been accounted for.</li>
+      <li>Find each letter of the alphabet in order.</li>
+      <li>Timer will start automatically on first click, and stop when all letters have been accounted for.</li>
       <li>Target word count of 70
         <ul>
           <li>If all letters are not shown within target word count, the script will continue generating words until all letters are accounted for.</li>
@@ -170,7 +171,7 @@
       <li>Count the number of black bars and enter it in the box.</li>
     </ul>
   </div>
- 
+
   <h3 id="blocks"><a href="blocks.html">Pattern Blocks</a></h3>
   <div>
     <ul>
@@ -185,24 +186,45 @@
     </ul>
   </div>
 
-<h3 id="spotmatch"><a href="spotmatch.html">Spot the Match</a></h3>
-<div>
-  <ul>
-    <li>Spot the matching figure. Each generated pair has one matching image. Click it to generate a new pair of cards.</li>
-    <li>Randomized scale &amp; rotation of the shapes can be toggled in the Settings.</li>
-    <li>Dual device feature:
-      <ul>
-        <li>Toggle Matched mode to display one shape cluster on the device.</li>
-        <li>Scan the QR code on the second device to display the matched cluster.</li>
-        <li>Identify and click the matching shape on both devices to proceed in parallel.</li>
-      </ul>
-    </li>
-  </ul>
-</div>
-<br/>
-<br/>
-<br/>
-<br/>
+  <h3 id="spotmatch"><a href="spotmatch.html">Spot the Match</a></h3>
+  <div>
+    <ul>
+      <li>Spot the matching figure. Each generated pair has one matching image. Click it to generate a new pair of cards.</li>
+      <li>Randomized scale &amp; rotation of the shapes can be toggled in the Settings.</li>
+      <li>Dual device feature:
+        <ul>
+          <li>Toggle Matched mode to display one shape cluster on the device.</li>
+          <li>Scan the QR code on the second device to display the matched cluster.</li>
+          <li>Identify and click the matching shape on both devices to proceed in parallel.</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+
+  <h3 id="clapstomp"><a href="clapstomp.html">Clap it Stomp it</a></h3>
+  <div>
+    <ul>
+      <li>Tap your hand or foot according to the figures
+        <ul>
+          <li>Top left: left hand</li>
+          <li>Top right: right hand</li>
+          <li>Bottom left: left foot</li>
+          <li>Bottom right: right foot</li>
+          <li>Circle: rest</li>
+        </ul>
+      </li>
+      <li>Adjust complexity by setting the Level via the dropdown menu.</li>
+      <li>Works best on a desktop browser (wide screen)</li>
+    </ul>
+
+  </div>
+
+
+  <hr />
+  <br />
+  <br />
+  <br />
 </body>
 
 </html>
