--- a/clapstomp.html
+++ b/clapstomp.html
@@ -7,7 +7,7 @@
   <title>Clap it Stomp it</title>
   <meta name="darkreader-lock">
   <link rel="stylesheet" href="vision.css" />
-  <script src="commonfn.js"></script>
+  <script src="commonfn.js?v=cs"></script>
   <script src="settings.js"></script>
 
   <style>
