rename to slap tap

--- a/clapstomp.html
+++ b/clapstomp.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clap it Stomp it</title>
+  <title>Slap Tap</title>
   <meta name="darkreader-lock">
   <link rel="stylesheet" href="vision.css" />
   <script src="commonfn.js?v=cs"></script>
