--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <li><a href="#lines">Line counting</a></li>
     <li><a href="#blocks">Pattern Blocks</a></li>
     <li><a href="#spotmatch">Spot the Match</a></li>
-    <li><a href="#clapstomp">Clap it Stomp it</a></li>
+    <li><a href="#slaptap">Slap Tap</a></li>
   </ul>
 
   <hr />
@@ -202,7 +202,7 @@
   </div>
 
 
-  <h3 id="clapstomp"><a href="clapstomp.html">Clap it Stomp it</a></h3>
+  <h3 id="slaptap"><a href="slaptap.html">Slap Tap</a></h3>
   <div>
     <ul>
       <li>Tap your hand or foot according to the figures
