--- a/spotmatch.html
+++ b/spotmatch.html
@@ -101,7 +101,7 @@
 
     /* only child single card mode 
      make it bigger */
-    .spotbox:first-of-type:not(:has(~ .spotbox)) {
+    .spotbox:only-child {
       --imgsize: min(25vw, 25vh, 250px);
     }
 
