--- a/spotmatch.html
+++ b/spotmatch.html
@@ -102,7 +102,7 @@
     /* only child single card mode 
      make it bigger */
     .spotbox:only-child {
-      --imgsize: min(25vw, 25vh, 250px);
+      --imgsize: min(25vw, calc(25vh - 2em), 250px);
     }
 
 
