--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
       <li>Drag tiles into the play area</li>
       <li>Click to rotate
         <ul>
-          <li>Works best with Firefox. On Chrome based browsers, the tile rotation does not get applied to the dragged image.</li>
+          <li><strike>Works best with Firefox. On Chrome based browsers, the tile rotation does not get applied to the dragged image.</strike></li>
+          <li>Fixed drag image rotation issue with certain browsers. Animation for rotation event is now based on layer opacity.</li>
         </ul>
       </li>
       <li>Incorrectly placed tile will be tinted red.</li>
