--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
   <div>
     <ul>
       <li>Drag tiles into the play area</li>
-      <li>Click to rotate
+      <li>Click to rotate clockwise, Right click to rotate counter-clockwise
         <ul>
-          <li><strike>Works best with Firefox. On Chrome based browsers, the tile rotation does not get applied to the dragged image.</strike></li>
+          <!-- li><strike>Works best with Firefox. On Chrome based browsers, the tile rotation does not get applied to the dragged image.</strike></li-->
           <li>Fixed drag image rotation issue with certain browsers. Animation for rotation event is now based on layer opacity.</li>
         </ul>
       </li>
