--- a/blocks.html
+++ b/blocks.html
@@ -315,8 +315,15 @@
 
 
     document.querySelector("#reload").onclick = function (e) {
+	if (document.querySelector("#playfield").querySelector("bl-ock")) {
+	  if (prompt("Tiles are in play. Are you sure you want to restart?")) {
       showchart();
       window.location.hash = "";
+	  }
+	} else {
+      showchart();
+      window.location.hash = "";
+	}
     };
 
 window.addEventListener("beforeunload", (e) => {
