--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
       </li>
       <li>Incorrectly placed tile will be tinted red.</li>
       <li>Drag tile over existing tiles to swap places (swapped tile gets bumped back to the tray)</li>
+      <li>Confirmation will display before reloading the game or navigating away if tiles are in play.</li>
     </ul>
   </div>
 
