--- a/lettertracking.html
+++ b/lettertracking.html
@@ -11,7 +11,8 @@
   <script src="settings.js"></script>
 
   <style>
-    #output,#alphabits {
+    #output,
+    #alphabits {
       font-size: 20pt;
       margin: 0.5em 2em 1.5em;
       line-height: 1.5em;
@@ -187,7 +188,7 @@
 
     let output = document.querySelector("#output");
 
-    
+
     document.querySelector("#alphabits").innerHTML = alphabet.toUpperCase() + "<br/>" + alphabet.toLowerCase();
 
 
