--- a/spotmatch.html
+++ b/spotmatch.html
@@ -312,7 +312,49 @@
       window.location.hash = "";
       showchart();
     };
+/*
+TODO
+- tile collection options
 
+Simple set:
+.square
+.triangle
+.circle
+.star
+.crescent moon
+.cloud
+.tree
+.raindrop
+.flower
+.leaf
+.hexagon
+monkey/dog/cat
+toy boat
+car
+bicycle
+shoe
+.X
+.spiral
+heart
+smiley
+dog paw
+wavy lines
+house
+sun
+arrow
+soccer/basket ball
+cherries
+strawberry
+fish
+person figure (gingerbread man) / bear
+umbrella
+hand
+
+
+
+
+
+*/
 
 
   </script>
